Added JavaDoc package.html files, fixed relevant JavaDoc links.

--- a/src/package.html
+++ b/src/package.html
@@ -3,7 +3,12 @@
 <head>
 <title>Ringlord Technologies ODF Java Library</title>
 <body>
-<p>Main entry point and general utility classes.</p>
-(actual documentation is coming soon)
+<p>The root package for this library, which offes only the GPL3 class,
+  whose purpose is to carry a program-accessible copy of the text of
+  the GNU General Public License version 3.</p>
+
+<p>If you execute this library as a program on the command line, you
+  should be able to generate the text of the GPLv3 by giving the
+  program a -L ('L' as in "License") argument.</p>
 </body>
 </html>
